refactor Add setting for unit test.