@@ -68,6 +68,7 @@ allprojects {
         jvmArgs(
             "--add-opens", "java.base/java.nio.file=ALL-UNNAMED",
             "--add-opens", "java.base/java.time=ALL-UNNAMED",
+            "--add-opens", "java.base/java.time.chrono=ALL-UNNAMED",
             "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
             "--add-opens", "java.desktop/java.awt.dnd=ALL-UNNAMED"
         )
